@@ -1,3 +1,8 @@
+2004-07-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/axis-group-engraver.cc (process_acknowledged_grobs):
+	backport.
+
 2004-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* ChangeLog: Remove pre-2.1 changes.
